--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -27,6 +27,7 @@ dependencies = [
     "httpx>=0.25.2",
     "reportlab>=4.0.0",
     "xhtml2pdf>=0.2.11",
+    "tenacity>=8.2.0",
 ]
 
 [project.optional-dependencies]
